# whisper

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: api.py
src/test/: 4번자리_나연.json  clean_4번자리_나연.json  whiper_infer_stt.py  whisper_download.py
src/v1/: main.py  router.py
